# squint

./: .cruft.json  .gitignore  .pre-commit-config.yaml  DEVELOPER_GUIDE.md  LICENSE  README.md  environment.yaml  fig2.ai  pyproject.toml
.github/ISSUE_TEMPLATE/: feature_request.yml
.github/workflows/: release.yaml
docs/: api.md  conf.py  contributing.md
docs/notebooks/: example.ipynb
examples/: _run_one_seed.py  _run_one_seed.sh  _run_one_variant.sh  _run_one_variant_inference.sh  _run_umap_rapids.sh  aggregate_seed_metrics.py  compute_inference_metrics.py  harmonize_mmb_smb20_panels.py  plot_chl59_ground_truth.py  plot_code_indices_spatial.py  plot_holdout_regions.py  plot_latent_umap.py  plot_mmb_sections.py  plot_svg_reconstruction.py  rerun_missing_metrics.sh  run_inference.py  run_squint.py  run_squint_mmb_smb.py  run_squint_multi_seed.py  run_stage2.py  stage2_decode_pearson.py  stamp_spatch_cell_id.py  stamp_spatch_metadata.py  stamp_spatch_uns_batch.py  submit_all_ablation_multiseed.sh  submit_dataset_sweep.sh  submit_inference_for_existing_runs.sh  submit_mmb_smb_ablations_v10.sh  submit_mmb_smb_ablations_v11.sh  submit_mmb_smb_ablations_v12.sh  submit_mmb_smb_ablations_v13.sh  submit_mmb_smb_ablations_v14.sh  submit_mmb_smb_ablations_v15.sh  submit_mmb_smb_ablations_v16.sh  submit_mmb_smb_ablations_v17.sh  submit_mmb_smb_ablations_v18.sh  submit_mmb_smb_ablations_v19.sh  submit_mmb_smb_ablations_v2.sh  submit_mmb_smb_ablations_v20.sh  submit_mmb_smb_ablations_v21.sh  (+24 more)
src/vqniche/: __init__.py  data_preprocess.py  dataloader.py  models.py  train_and_eval.py  train_student.py  train_teacher.py  utils.py
src/vqniche/codebooks/: __init__.py  cosine_codebook.py
src/vqniche/dataloaders/: __init__.py  custom_in_memory_dataset.py  in_memory_datamodule.py  in_memory_dataset_blob.py  transforms.py
src/vqniche/dataset/: __init__.py  in_memory_dataset_blob.py  on_disk_dataset_blob_pt.py  on_disk_dataset_blob_sqlite.py  transforms.py
src/vqniche/decoders/: __init__.py  linear_softmax.py  mlp_softmax.py  temperature_annealer.py
src/vqniche/encoders/: __init__.py  vanilla_gnn_encoder.py  vqgraph_encoder.py  vqniche_dual_encoder.py  vqniche_encoder.py
src/vqniche/gnn_modules/: sage_conv.py
src/vqniche/initializers/: __init__.py  initialize.py  utils.py
src/vqniche/loss/: __init__.py  adversarial_batch.py  bce_adjacency_reconstruction.py  bce_cosine_adjacency_reconstruction.py  codebook_losses.py  codebook_regularization.py  contrastive_cell_attribute.py  cross_entropy.py  disentangle.py  mask_token_regularization.py  mmd_batch.py  mmd_prior.py  mse_adjacency_reconstruction.py  mse_attribute_reconstruction.py  nb_attribute_reconstruction.py  spatial_prior_loss.py  vqgraph_codebook_loss.py
src/vqniche/metrics/: __init__.py  accuracy_score.py  attributes.py  benchmarking.py  cas.py  clisis.py  codebook_utilization.py  cosine_similarity.py  gcs.py  mlami.py  mmd.py  nasw.py  pearson_correlation.py  utils.py
src/vqniche/models/: __init__.py  base_model.py  graphsage.py  mlp.py  vanilla_gnn.py  vanilla_mlp.py  vqgraph.py  vqniche.py  vqniche_dual.py
src/vqniche/modules/: __init__.py  adversary.py  branch_adapter.py  conditional_mlp.py  continuous_vq.py  cosine_codebook.py  cross_stitch.py  dispersion_head.py  film.py  gnn.py  hierarchical_vq.py  linear_softmax_decoder.py  mlp.py  temperature_annealer.py  vq.py
src/vqniche/plotting/: __init__.py  code_assignment_on_xy_coordinates.py  loss_and_metrics_vs_epoch.py  umap_attribute_imputation.py
src/vqniche/preprocessors/: __init__.py  graph_constructors.py  normalizers.py
src/vqniche/stage2/: README.md  __init__.py  checkpoint.py  config.py  data.py  datamodule.py  decode.py  evaluate.py  lightning.py  masking.py  model.py  positional.py  transformer.py
src/vqniche/stage2/backbones/: __init__.py  base.py  diffusion.py  gnn.py  gps.py  graphmae.py  labelprop.py  transformer_backbone.py
src/vqniche/stage2/tests/: test_numpy_core.py  test_torch_model.py
src/vqniche/tasks/: mlp_covariate.py
src/vqniche/utils/: __init__.py  adjacency_reconstruction.py  config_parsers.py  initialize.py  loss.py  loss_utils.py  mask.py  metrics.py  parse_datasetblob_configs.py  parse_test_configs.py  parse_train_configs.py  type_conversions.py  vqgraph_helpers.py
src/vqniche/vqgraph/: __init__.py  data_preprocess.py  dataloader.py  models.py  train_and_eval.py  train_student.py  train_teacher.py  vq.py
tests/: test_basic.py
